// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WalletListItem should render 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-6 mt-1"
        >
          <div
            class="flex"
          >
            <div
              class="sc-AxiKw jQtkkF"
            >
              <div
                class="sc-AxhCb VoPpj"
                height="20"
                width="20"
              >
                <svg>
                  btc.svg
                </svg>
              </div>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fERhyU"
              data-testid="Avatar"
            >
              <div
                class="overflow-hidden rounded-full"
              >
                <img
                  alt=""
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title=""
                />
              </div>
            </div>
          </div>
        </td>
        <td
          class="py-1"
        />
        <td
          class="py-1 text-sm font-bold"
        >
          <div
            class="inline-block mr-2 align-middle text-theme-warning-400"
          >
            <div
              class="sc-AxhCb kAKLDr"
              height="16"
              width="16"
            >
              <svg>
                star.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block mr-2 align-middle text-theme-neutral-600"
          >
            <div
              class="sc-AxhCb kAKLDr"
              height="16"
              width="16"
            />
          </div>
        </td>
        <td
          class="font-semibold text-right"
        >
          <div />
        </td>
        <td
          class="text-right text-theme-neutral-400"
        >
          <div />
        </td>
        <td>
          0
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`WalletListItem should render a button if variant is 'singleAction' 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="border-b border-theme-neutral-200"
      >
        <td
          class="py-6 mt-1"
        >
          <div
            class="flex"
          >
            <div
              class="sc-AxiKw jQtkkF"
            >
              <div
                class="sc-AxhCb VoPpj"
                height="20"
                width="20"
              >
                <svg>
                  btc.svg
                </svg>
              </div>
            </div>
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 fERhyU"
              data-testid="Avatar"
            >
              <div
                class="overflow-hidden rounded-full"
              >
                <img
                  alt=""
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"70\\" cy=\\"70\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"60\\" cx=\\"50\\" cy=\\"60\\" fill=\\"rgb(33, 150, 243)\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title=""
                />
              </div>
            </div>
          </div>
        </td>
        <td
          class="py-1"
        />
        <td
          class="py-1 text-sm font-bold"
        />
        <td
          class="font-semibold text-right"
        >
          <div />
        </td>
        <td
          class="text-right text-theme-neutral-400"
        >
          <div />
        </td>
        <td>
          <div
            class="text-right"
          >
            <button
              class="sc-AxirZ fhzkRl"
              color="primary"
              data-testid="button"
              type="button"
            >
              Option 1
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
